<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.AppInfoFragment"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <ImageView
                android:id="@+id/app_info_image_view_left_arrow"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_arrow_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_application_information"
                android:layout_marginStart="28dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textSize="18sp"
                android:textColor="@color/onlight_01"
                app:layout_constraintStart_toEndOf="@id/app_info_image_view_left_arrow"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/onlight_04" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textSize="12sp"
                android:textColor="@color/onlight_02"
                android:lineSpacingExtra="0sp"
                android:text="@string/app_info_name" />

            <TextView
                android:id="@+id/app_info_text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textSize="14sp"
                android:textColor="@color/onlight_01"
                android:lineSpacingExtra="6sp"
                android:layout_marginTop="6dp"
                android:text="@string/app_name"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/onlight_04"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textSize="12sp"
                android:textColor="@color/onlight_02"
                android:lineSpacingExtra="0sp"
                android:text="@string/app_info_id" />

            <TextView
                android:id="@+id/app_info_text_view_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textSize="14sp"
                android:textColor="@color/onlight_01"
                android:lineSpacingExtra="6sp"
                android:layout_marginTop="6dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/onlight_04"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

    </LinearLayout>
</layout>