<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textColor="@color/onlight_01"
            android:text="@string/group_call_created_room_title"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="@color/onlight_02"
            android:lineSpacingExtra="6sp"
            android:text="@string/group_call_created_room_message" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:cardBackgroundColor="#eeeeee"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <TextView
                    android:id="@+id/dialog_text_view_room_id_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group_call_room_id"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textSize="12sp"
                    android:textColor="@color/onlight_01"
                    android:lineSpacingExtra="0sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <TextView
                    android:id="@+id/dialog_text_view_room_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@id/dialog_text_view_room_id_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/dialog_image_view_copy"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:textColor="@color/onlight_02"
                    android:lineSpacingExtra="4sp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    />

                <ImageView
                    android:id="@+id/dialog_image_view_copy"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_copy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/dialog_text_view_ok"
            android:layout_width="36dp"
            android:layout_height="32dp"
            android:layout_marginTop="32dp"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="@string/ok"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="#742ddd"
            android:letterSpacing="0.03"
            android:lineSpacingExtra="2sp"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>
