<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signin.SignInActivity"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/text_view_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:text="Quickstart 1.0.0 SDK 1.0.0"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/onlight_02" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_view_version">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@mipmap/ic_sendbird"
                android:layout_marginTop="56dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textColor="@color/onlight_01"
                android:text="@string/sign_in_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="36dp"
                android:textColorHint="@color/onlight_03"
                app:errorTextAppearance="@style/ErrorTextAppearance"
                app:hintTextColor="#742ddd"
                app:boxStrokeColor="#742ddd"
                app:boxBackgroundColor="@color/background_200"
                app:boxCornerRadiusTopStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusBottomEnd="4dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="2dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_application_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/sign_in_hint_application_id"
                    android:textColorHint="@color/onlight_03"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/onlight_03"
                app:errorTextAppearance="@style/ErrorTextAppearance"
                app:hintTextColor="#742ddd"
                app:boxStrokeColor="#742ddd"
                app:boxBackgroundColor="@color/background_200"
                app:boxCornerRadiusTopStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusBottomEnd="4dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="2dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/sign_in_hint_user_id"
                    android:textColorHint="@color/onlight_03"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/onlight_03"
                app:errorTextAppearance="@style/ErrorTextAppearance"
                app:hintTextColor="#742ddd"
                app:boxStrokeColor="#742ddd"
                app:boxBackgroundColor="@color/background_200"
                app:boxCornerRadiusTopStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusBottomEnd="4dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="2dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_access_token"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/sign_in_hint_access_token"
                    android:textColorHint="@color/onlight_03"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_in"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/sign_in_button"
                android:textColor="@color/ondark_01"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                app:cornerRadius="4dp"
                app:backgroundTint="#742ddd"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>